<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YalantisTestTask</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="content_description">Content Description</string>
    <string name="button_text">Toggle</string>
    <string name="title_text">Title</string>
    <string name="body_text">Body</string>
    <string name="address_text">Address</string>

</resources>