<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#CCC" >

        <Button
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />
        
        <LinearLayout
		android:id="@+id/linLayoutItem"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="50dp"
		android:orientation="vertical" >

		<ImageView
			android:id="@+id/imgPicture"
			android:layout_width="128dp"
			android:layout_height="128dp"
			android:gravity="center_horizontal"
			android:contentDescription="@string/content_description"
			android:visibility="gone" />

		<TextView
			android:id="@+id/txtTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/title_text"
			android:textIsSelectable="true"
			android:textSize="24sp"
			android:visibility="gone" />

		<TextView
			android:id="@+id/txtBody"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/body_text"
			android:textIsSelectable="true"
			android:textSize="24sp"
			android:visibility="gone" />

		<TextView
			android:id="@+id/txtAddress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/address_text"
			android:textIsSelectable="true"
			android:textSize="24sp"
			android:visibility="gone" />
	</LinearLayout>
        
        
        
        
        
        
        
        
        
        
        
        

    </LinearLayout>